# apk-forge

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  file_ops.cpp  hash_engine.cpp  native_bridge.cpp
app/src/main/java/com/apkforge/core/: BuildManager.java
app/src/main/java/com/apkforge/network/: GithubApiClient.java
app/src/main/java/com/apkforge/utils/: FileUtils.java
app/src/main/java/com/apkforge/webhook/: WebhookTrigger.java
app/src/main/kotlin/com/apkforge/: ApkForgeApp.kt  AppPreferences.kt
app/src/main/kotlin/com/apkforge/core/: BuildMonitorService.kt  BuildReceiver.kt
app/src/main/kotlin/com/apkforge/model/: Models.kt
app/src/main/kotlin/com/apkforge/security/: NativeCrypto.kt
app/src/main/kotlin/com/apkforge/ui/: MainActivity.kt
app/src/main/kotlin/com/apkforge/ui/dashboard/: DashboardFragment.kt
app/src/main/kotlin/com/apkforge/ui/history/: HistoryFragment.kt
app/src/main/kotlin/com/apkforge/utils/: NativeFileOps.kt
app/src/main/kotlin/com/apkforge/viewmodel/: BuildViewModel.kt
app/src/main/res/layout/: activity_main.xml  fragment_build.xml  fragment_dashboard.xml  fragment_history.xml  fragment_settings.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
buildscripts/: BuildOrchestrator.cs
(+1 files in other folders)
